// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it renders correctly 1`] = `
<div
  className="stncl__preview"
  style={null}
>
  <div>
    Just a test
  </div>
</div>
`;

exports[`it should render correctly when given a template 1`] = `
<div
  className="some-other-class"
  style={
    Object {
      "background": "A test component",
    }
  }
>
  <div>
    Just a test
  </div>
</div>
`;
